tests/preproc/define/fail001.ds
const a = # ;
;
const b = # unknown
;
const c = ##
;
#info
 #info
##
;